--- a/index.html
+++ b/index.html
@@ -6,6 +6,86 @@
   <title>Homework 4</title>
 </head>
 <body>
-  
+  <header> 
+    <h1>HTML5 Семантичні елементи</h1>
+     <p>
+      Семантичний елемент чітко описує його значення як для браузера, так i для розробника.
+      Приклади не <strong>семантичних</strong> елементів: &#x3C;div&#x3E;  i &#x3C;span&#x3E;- нічого не говорить про його вміст.
+      Приклади <strong>семантичних</strong> елементів: &#x3C;form&#x3E;, &#x3C;table&#x3E; i &#x3C;article&#x3E;- чітко визначає його зміст.
+     </p>
+
+     <h2>Підтримка браузерів</h2>
+      <img src="images/1520047697221.jpg" alt="various browers" width="200px">
+      <p>
+        Семантичні елементи HTML5 підтримуються y всіх сучасних браузерах.Крім того, ви можете "навчити"
+        старих браузерів, як обробляти "невідомі елементи".
+        Прочитайте про це в <a href="">підтримці браузера HTML5</a>.
+      </p>
+
+  </header>
+
+  <main>
+    <section>
+      <h2>Нові семантичні елементи в HTML5</h2>
+      <p>
+        HTML5 пропонує нові семантичні елементи для визначення різних частин
+        веб-сторінки:
+        <ul>
+        <li>&#x3C;section&#x3E;</li>
+        <li>&#x3C;article&#x3E;</li>
+        <li>&#x3C;header&#x3E;</li>
+        <li>&#x3C;footer&#x3E;</li>
+        </ul>
+      </p>
+    </section>
+
+    <section>
+      <h2>HTML5 &#x3C;section&#x3E; елемент</h2>
+        <p>
+          Елемент &#x3C;section&#x3E;визначає розділ в документі. Згідно з документацією в3к'c HTML5: 
+          "розділ представляє собою тематичну угруповання контенту, зазвичай з заголовком". Домашня сторінка 
+           зазвичай може бути розділена на розділи для
+           ознайомлення, змісту i контактної інформації.
+        </p>
+        <img src="images/Знімок екрана 2024-05-29 204458.png" alt=""example>
+    </section>
+
+    <section>
+      <h2>HTML5 &#x3C;article&#x3E; елемент </h2>
+        <p>
+          Елемент &#x3C;article&#x3E;визначає незалежний, автономний вміст.
+          Стаття повинна мати сенс самостійно, i вона повинна мати можливість
+          читати його незалежно від іншої частини веб-сайту.
+          Приклади того, де можна використовувати елемент &#x3C;article&#x3E;:
+            <ul>
+              <li>Повідомлення на форумі</li>
+              <li>блозі</li>
+              <li>Газетна стаття</li>
+            </ul>
+        </p>
+        <img src="images/Знімок екрана 2024-05-29 204509.png" alt="example">
+    </section>
+
+    <section>
+      <h2>HTML5 &#x3C;header&#x3E; елемент</h2>
+        <p>
+          Елемент &#x3C;header&#x3E;задає заголовок для документа aбо розділу. Елемент &#x3C;header&#x3E;повинен використовуватися в якості контейнера для
+          вступного змісту. В одному документі може бути кілька елементів &#x3C;header&#x3E;.
+          У наступному прикладі визначається заголовок для статті:
+        </p>
+        <img src="images/Знімок екрана 2024-05-29 204535.png" alt="example">
+    </section>
+
+    <section>
+      <h2>HTML5 &#x3C;footer&#x3E; елемент</h2>
+        <p>
+          Елемент &#x3C;footer&#x3E;вказує нижній колонтитул для документа або розділу.
+          Нижній колонтитул зазвичай містить автора документа, інформацію про
+          авторське право, посилання на умови використання, контактні дані і т.д.
+          В одному документі може бути кілька елементів &#x3C;footer&#x3E;.
+        </p>
+        <img src="images/Знімок екрана 2024-05-29 204844.png" alt="example">
+    </section>
+  </main>
 </body>
 </html>
