add changes to content

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         HTML5 пропонує нові семантичні елементи для визначення різних частин
         веб-сторінки:
         <ul>
-        <li>&#x3C;section&#x3E;</li>
-        <li>&#x3C;article&#x3E;</li>
-        <li>&#x3C;header&#x3E;</li>
-        <li>&#x3C;footer&#x3E;</li>
+        <li><a href="#section">&#x3C;section&#x3E;</a></li>
+        <li><a href="#article">&#x3C;article&#x3E;</a></li>
+        <li><a href="#header">&#x3C;header&#x3E;</a></li>
+        <li><a href="#footer">&#x3C;footer&#x3E;</a></li>
         </ul>
       </p>
     </section>
 
     <section>
-      <h2>HTML5 &#x3C;section&#x3E; елемент</h2>
+      <h2 id="section">HTML5 &#x3C;section&#x3E; елемент</h2>
         <p>
           Елемент &#x3C;section&#x3E;визначає розділ в документі. Згідно з документацією в3к'c HTML5: 
           "розділ представляє собою тематичну угруповання контенту, зазвичай з заголовком". Домашня сторінка 
@@ -51,7 +51,7 @@
     </section>
 
     <section>
-      <h2>HTML5 &#x3C;article&#x3E; елемент </h2>
+      <h2 id="article">HTML5 &#x3C;article&#x3E; елемент </h2>
         <p>
           Елемент &#x3C;article&#x3E;визначає незалежний, автономний вміст.
           Стаття повинна мати сенс самостійно, i вона повинна мати можливість
@@ -67,7 +67,7 @@
     </section>
 
     <section>
-      <h2>HTML5 &#x3C;header&#x3E; елемент</h2>
+      <h2 id="header">HTML5 &#x3C;header&#x3E; елемент</h2>
         <p>
           Елемент &#x3C;header&#x3E;задає заголовок для документа aбо розділу. Елемент &#x3C;header&#x3E;повинен використовуватися в якості контейнера для
           вступного змісту. В одному документі може бути кілька елементів &#x3C;header&#x3E;.
@@ -77,7 +77,7 @@
     </section>
 
     <section>
-      <h2>HTML5 &#x3C;footer&#x3E; елемент</h2>
+      <h2 id="footer">HTML5 &#x3C;footer&#x3E; елемент</h2>
         <p>
           Елемент &#x3C;footer&#x3E;вказує нижній колонтитул для документа або розділу.
           Нижній колонтитул зазвичай містить автора документа, інформацію про
@@ -85,6 +85,21 @@
           В одному документі може бути кілька елементів &#x3C;footer&#x3E;.
         </p>
         <img src="images/Знімок екрана 2024-05-29 204844.png" alt="example">
+    </section>
+
+    <section>
+      <h3>Про сучасні тренди front-end розробки детальніше у відео нижче:</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dEBVe8Ij7JU?si=Efxze6fv-d5al4jP" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+         gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </section>
+
+    <section>
+      <h3>Дізнатися більше про авторку блога:</h3>
+      <iframe src="https://catharkriss.github.io/homework_course/"
+        width="100%" height="500" frameborder="0"
+        allowfullscreen sandbox>
+      </iframe>
     </section>
   </main>
 </body>
